# 26wurenLiaoYutao_teamwork

./: .gitignore  CHANGELOG.md  GAZEBO_LEARNING_NOTES.md  README.md
fsd_common_msgs/: CMakeLists.txt
homework/: INFO launch All log files.txt  Starting  right_angle_track.txt  [INFO] [launch] All log files can b.txt  [INFO] [launch] All log files can b1.txt  [INFO] [launch] All log files can b2.txt  bash home tumaini ros2.txt  bash home tumaini ros2_1.txt  daily_report.txt  header stamp sec 107.txt  home tumaini ros log 2026.txt
homework/percep_node_track/: README.md
homework/percep_node_track/fsd_common_msgs/: CMakeLists.txt
right_angle_stack/: package.xml  setup.py
right_angle_stack/config/: right_angle_stack.yaml
right_angle_stack/launch/: right_angle_harmonic.launch.py  right_angle_sim.launch.py  right_angle_wsl_headless.launch.py
right_angle_stack/models/right_angle_car_wsl_headless/: model.config  model.sdf
right_angle_stack/right_angle_stack/: localization_fusion.py  pure_pursuit_controller.py  sim_sensor_bridge.py  track_perception.py
right_angle_stack_cpp/: CMakeLists.txt  package.xml
right_angle_stack_cpp/config/: right_angle_stack.yaml
right_angle_stack_cpp/include/right_angle_stack_cpp/: track_model.hpp  utils.hpp
right_angle_stack_cpp/launch/: right_angle_harmonic.launch.py
right_angle_stack_cpp/models/right_angle_car_harmonic/: model.config  model.sdf
right_angle_stack_cpp/src/: cone_mapper.cpp  localization_fusion.cpp  pure_pursuit_controller.cpp  right_angle_planner.cpp  track_model.cpp  track_perception.cpp
right_angle_stack_cpp/src/cone_mapper/: CMakeLists.txt  cone_mapper.cpp  cone_mapper.hpp  main.cpp
right_angle_stack_cpp/src/localization/: CMakeLists.txt  localization_fusion.cpp  localization_fusion.hpp  main.cpp
right_angle_stack_cpp/src/pure_pursuit_controller/: CMakeLists.txt  pure_pursuit_controller.cpp  pure_pursuit_controller.hpp
right_angle_stack_cpp/src/right_angle_planner/: CMakeLists.txt  main.cpp  right_angle_planner.cpp  right_angle_planner.hpp
right_angle_stack_cpp/urdf/: right_angle_car.urdf.xacro
right_angle_stack_mix/: CMakeLists.txt  package.xml
right_angle_stack_mix/config/: right_angle_stack.yaml
right_angle_stack_mix/launch/: right_angle_harmonic.launch.py
right_angle_stack_mix/models/right_angle_car_harmonic/: model.config  model.xacro
right_angle_stack_mix/src/: track_model.cpp  track_perception.cpp
right_angle_stack_mix/src/cone_mapper/: CMakeLists.txt  cone_mapper.py
right_angle_stack_mix/src/localization/: localization_fusion.cpp
right_angle_stack_mix/src/pure_pursuit_controller/: main.cpp  pure_pursuit_controller.cpp
right_angle_stack_mix/src/right_angle_planner/: right_angle_planner.cpp
right_angle_stack_mix/src/track_perception/: CMakeLists.txt  track_perception.py
tracks/: CMakeLists.txt
tracks/worlds/: right_angle.world  right_angle_wsl_headless.sdf
